--- a/build.gradle
+++ b/build.gradle
@@ -15,3 +15,7 @@ dependencies {
     implementation 'com.google.oauth-client:google-oauth-client-jetty:1.34.1'
     implementation 'com.google.apis:google-api-services-gmail:v1-rev20220404-2.0.0'
 }
+
+run {
+    standardInput = System.in
+}
