--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,8 @@ dependencies {
     implementation 'com.google.api-client:google-api-client:2.0.0'
     implementation 'com.google.oauth-client:google-oauth-client-jetty:1.34.1'
     implementation 'com.google.apis:google-api-services-gmail:v1-rev20220404-2.0.0'
+    implementation 'com.sun.mail:javax.mail:1.6.2'
+
 }
 
 run {
